...
            "state" : "translated",
            "value" : "Сумма скрыта, нажмите, чтобы показать"
          }
        }
      }
    },
    "Home" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Home"
...
            "state" : "translated",
            "value" : "Игорь"
          }
        }
      }
    },
    "Insights" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Insights"
...
            "state" : "translated",
            "value" : "Оплачено вами"
          }
        }
      }
    },
    "People" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "People"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Люди"
          }
        }
      }
    },
    "Pick a date" : {
      "extractionState" : "manual",
...
